--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
-title: Your awesome title
-email: your-email@domain.com
+title: Natalie Castro
+email: natalie.castro@colorado.edu
 description: >
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: mloberg
-github_username: mloberg
+  I am a student studying sociology, data science, education, and information science. My research interests are: human-centered data science accessible technology, and data generation and visualization. Read more about my experience and my undergraduate research work in my resume/CV or find me on LinkedIn.
+twitter_username: ~
+github_username: NatalieRMCastro
 dribbble_username: ~
 facebook_username: ~
 flickr_username: ~
-instagram_username: mloberg
+instagram_username: ~
 linkedin_username: ~
 pinterest_username: ~
 youtube_username: ~
