--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Natalie Castro
 email: natalie.castro@colorado.edu
 description: >
-  I am a student studying sociology, data science, education, and information science. My research interests are: human-centered data science accessible technology, and data generation and visualization. Read more about my experience and my undergraduate research work in my resume/CV or find me on LinkedIn.
+  <br /> Masters Student <br /> in Information Science, <br />at Univerisity of Colorado.
 twitter_username: ~
 github_username: NatalieRMCastro
 dribbble_username: ~
