--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ dribbble_username: ~
 facebook_username: ~
 flickr_username: ~
 instagram_username: ~
-linkedin_username: https://www.linkedin.com/in/natalie-rm-castro/
+linkedin_username: natalie-rm-castro
 pinterest_username: ~
 youtube_username: ~
 googleplus_username: ~
