--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ linkedin_username: natalie-rm-castro
 pinterest_username: ~
 youtube_username: ~
 googleplus_username: ~
+mail_username: naca4005@colorado.edu
 rss: true
 
 show_excerpts: true
