--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Natalie Castro
 email: natalie.castro@colorado.edu
 description: >
-  <br>I am a Masters Student studying Information Science at the Univerisity of Colorado.
+  I am a Masters Student studying Information Science at the Univerisity of Colorado.
 twitter_username: ~
 github_username: NatalieRMCastro
 dribbble_username: ~
