--- a/_config.yml
+++ b/_config.yml
@@ -29,3 +29,9 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-pdf-embed
+
+fonts:
+  preconnect_urls:
+    - https://fonts.gstatic.com
+  font_urls:
+    - https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap
