--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Natalie Castro
 email: natalie.castro@colorado.edu
 description: >
-  I am a Masters Student studying Information Science at the Univerisity of Colorado.
+  I am a PhD Student studying Computer Science at Northeastern University.
 twitter_username: ~
 github_username: NatalieRMCastro
 dribbble_username: ~
@@ -12,7 +12,7 @@ linkedin_username: natalie-rm-castro
 pinterest_username: ~
 youtube_username: ~
 googleplus_username: ~
-mail_username: naca4005@colorado.edu
+mail_username: castro.na@northeastern.edu
 rss: true
 baseurl: 
 
